Install devise, add a user, and install devise views.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,15 @@
     <div class='navbar-inner'>
       <div class='container'>
         <a href='#' class='brand'> Treebook</a>
-        <ul class="nav">
-          <li><%= link_to "All Statuses", statuses_path %>
+        <ul class='nav'>
+          <li><%= link_to 'All Statuses', statuses_path %>
       </div>
     </div>
   </div>
   <div class='container'>
+    <p class='notice'><%= notice %></p>
+    <p class='alert'><%= alert %></p>
+
     <%= yield %>
   </div>
 
